fixing types, body scrolling issue on iOS

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -303,10 +303,12 @@ span {
   }
 }
 
+/*
 .no-scroll {
   overflow: hidden;
+  max-height: 100vh;
 }
-
+*/
 //gallery styles
 .gallery-photo-container {
   cursor: pointer;
